--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Travel and Explore" />
+    <meta name="keywords" content="travel, adventure, exploration, locations" />
     <meta name="author" content="Lolo E." />
     <title>Around the US</title>
     <link rel="shortcut icon" href="favicon.ico" />
@@ -11,7 +13,7 @@
 
   <body class="page">
     <div class="page__content">
-      <header class="header">
+      <header class="header page__section">
         <img
           src="./images/logo.svg"
           alt="Around the US logo"
@@ -19,84 +21,92 @@
         />
       </header>
       <main class="content">
-        <section class="profile">
+        <secion class="profile page__section">
           <img
             src="./images/jacques-cousteau.jpg"
-            alt="Jacques Cousteau avatar"
+            alt="Profile avatar"
             class="profile__avatar"
           />
           <div class="profile__info">
             <h1 class="profile__name">Jacques Cousteau</h1>
-            <p class="profile__description">Explorer</p>
             <button class="profile__edit"></button>
+            <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add"></button>
-        </section>
-        <section class="location">
-          <ui class="location__cards">
+        </secion>
+        <section class="location page__section">
+          <ul class="location__cards">
             <li class="card">
               <img
                 src="./images/yosemite-valley.png"
-                alt=""
+                alt="Yosemite Valley image"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__name">Yosemite Valley</h2>
+                <h2 class="card__text">Yosemite Valley</h2>
                 <button class="card__like"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/lake-louise.png" alt="" class="card__image" />
+              <img
+                src="./images/lake-louise.png"
+                alt="Lake Louise image"
+                class="card__image"
+              />
               <div class="card__description">
-                <h2 class="card__name">Lake Louise</h2>
+                <h2 class="card__text">Lake Louise</h2>
                 <button class="card__like"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/bald-mountains.png"
-                alt=""
+                alt="Bald Mountains image"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__name">Bald Mountains</h2>
+                <h2 class="card__text">Bald Mountains</h2>
                 <button class="card__like"></button>
               </div>
             </li>
             <li class="card">
-              <img src="./images/latemar.png" alt="" class="card__image" />
+              <img
+                src="./images/latemar.png"
+                alt="Latemar image"
+                class="card__image"
+              />
               <div class="card__description">
-                <h2 class="card__name">Latemar</h2>
+                <h2 class="card__text">Latemar</h2>
                 <button class="card__like"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/vanoise-national-park.png"
-                alt=""
+                alt="Vanoise National Park image"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__name">Vanoise National Park</h2>
+                <h2 class="card__text">Vanoise National Park</h2>
                 <button class="card__like"></button>
               </div>
             </li>
             <li class="card">
               <img
                 src="./images/lago-di-braies.png"
-                alt=""
+                alt="Lago di Braies image"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__name">Lago di Braies</h2>
+                <h2 class="card__text">Lago di Braies</h2>
                 <button class="card__like"></button>
               </div>
             </li>
-          </ui>
+          </ul>
         </section>
       </main>
-      <footer class="footer">
-        <p class="footer__copyright">&#169; 2023 Around the U.S.</p>
+      <footer class="footer page__section">
+        <p class="footer__copyright">&#169; 2023 Around The U.S.</p>
       </footer>
     </div>
   </body>
