--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         />
       </header>
       <main class="content">
-        <secion class="profile page__section">
+        <section class="profile page__section">
           <img
             src="./images/jacques-cousteau.jpg"
             alt="Profile avatar"
@@ -33,7 +33,7 @@
             <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add"></button>
-        </secion>
+        </section>
         <section class="location page__section">
           <ul class="location__cards">
             <li class="card">
