--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
           />
           <div class="profile__info">
             <h1 class="profile__name">Jacques Cousteau</h1>
-            <button class="profile__edit"></button>
+            <button
+              type="button"
+              aria-lablel="Edit"
+              class="profile__edit"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add"></button>
+          <button type="button" aria-lablel="Add" class="profile__add"></button>
         </section>
         <section class="location page__section">
           <ul class="location__cards">
@@ -44,7 +48,11 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Yosemite Valley</h2>
-                <button class="card__like"></button>
+                <button
+                  type="button"
+                  aria-lablel="Like"
+                  class="card__like"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -55,7 +63,11 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Lake Louise</h2>
-                <button class="card__like"></button>
+                <button
+                  type="button"
+                  aria-lablel="Like"
+                  class="card__like"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -66,7 +78,11 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Bald Mountains</h2>
-                <button class="card__like"></button>
+                <button
+                  type="button"
+                  aria-lablel="Like"
+                  class="card__like"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -77,7 +93,11 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Latemar</h2>
-                <button class="card__like"></button>
+                <button
+                  type="button"
+                  aria-lablel="Like"
+                  class="card__like"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -88,7 +108,11 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Vanoise National Park</h2>
-                <button class="card__like"></button>
+                <button
+                  type="button"
+                  aria-lablel="Like"
+                  class="card__like"
+                ></button>
               </div>
             </li>
             <li class="card">
@@ -99,7 +123,11 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Lago di Braies</h2>
-                <button class="card__like"></button>
+                <button
+                  type="button"
+                  aria-lablel="Like"
+                  class="card__like"
+                ></button>
               </div>
             </li>
           </ul>
