Let this nightmare end

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <h1 class="profile__name">Jacques Cousteau</h1>
             <button
               type="button"
-              aria-lablel="Edit"
+              aria-label="Edit"
               class="profile__edit"
             ></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button type="button" aria-lablel="Add" class="profile__add"></button>
+          <button type="button" aria-label="Add" class="profile__add"></button>
         </section>
         <section class="location page__section">
           <ul class="location__cards">
@@ -50,7 +50,7 @@
                 <h2 class="card__text">Yosemite Valley</h2>
                 <button
                   type="button"
-                  aria-lablel="Like"
+                  aria-label="Like"
                   class="card__like"
                 ></button>
               </div>
@@ -65,7 +65,7 @@
                 <h2 class="card__text">Lake Louise</h2>
                 <button
                   type="button"
-                  aria-lablel="Like"
+                  aria-label="Like"
                   class="card__like"
                 ></button>
               </div>
@@ -80,7 +80,7 @@
                 <h2 class="card__text">Bald Mountains</h2>
                 <button
                   type="button"
-                  aria-lablel="Like"
+                  aria-label="Like"
                   class="card__like"
                 ></button>
               </div>
@@ -95,7 +95,7 @@
                 <h2 class="card__text">Latemar</h2>
                 <button
                   type="button"
-                  aria-lablel="Like"
+                  aria-label="Like"
                   class="card__like"
                 ></button>
               </div>
@@ -110,7 +110,7 @@
                 <h2 class="card__text">Vanoise National Park</h2>
                 <button
                   type="button"
-                  aria-lablel="Like"
+                  aria-label="Like"
                   class="card__like"
                 ></button>
               </div>
@@ -125,7 +125,7 @@
                 <h2 class="card__text">Lago di Braies</h2>
                 <button
                   type="button"
-                  aria-lablel="Like"
+                  aria-label="Like"
                   class="card__like"
                 ></button>
               </div>
