--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="modal__container">
         <button class="modal__close" id="profile-modal-close"></button>
         <p class="modal__heading">Edit Profile</p>
-        <form class="modal__form">
+        <form class="modal__form" name="profile-form">
           <input
             type="text"
             class="modal__input"
