--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <li class="card">
         <img src="" alt="" class="card__image" />
         <div class="card__description">
-          <h2 class="card__text"></h2>
+          <h2 class="card__text">Card Title</h2>
           <button type="button" aria-label="Like" class="card__like"></button>
         </div>
       </li>
