--- a/index.html
+++ b/index.html
@@ -115,8 +115,22 @@
       </div>
     </div>
 
+    <div class="modal" id="full-image-modal">
+      <div class="modal__image-container">
+        <button
+          type="button"
+          aria-label="Close"
+          class="modal__image-close"
+          id="image-modal-close"
+        ></button>
+        <img src="" alt="" class="modal__image" />
+        <p class="modal__image-text">Card Title</p>
+      </div>
+    </div>
+
     <template id="card-template">
       <li class="card">
+        <button type="button" aria-label="Delete" class="card__delete"></button>
         <img src="" alt="" class="card__image" />
         <div class="card__description">
           <h2 class="card__text">Card Title</h2>
