--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           class="modal__image-close"
           id="image-modal-close"
         ></button>
-        <img src="" alt="" class="modal__image" />
+        <img src="url" alt="" class="modal__image" />
         <p class="modal__image-text">Card Title</p>
       </div>
     </div>
@@ -131,7 +131,7 @@
     <template id="card-template">
       <li class="card">
         <button type="button" aria-label="Delete" class="card__delete"></button>
-        <img src="" alt="" class="card__image" />
+        <img src="url" alt="" class="card__image" />
         <div class="card__description">
           <h2 class="card__text">Card Title</h2>
           <button type="button" aria-label="Like" class="card__like"></button>
