--- a/index.html
+++ b/index.html
@@ -93,12 +93,7 @@
               id="profile-description-input-error"
             ></span>
           </label>
-          <button
-            type="submit"
-            aria-label="Save"
-            class="modal__save"
-            id="modal-profile-save"
-          >
+          <button type="submit" aria-label="Save" class="modal__submit">
             Save
           </button>
         </form>
@@ -140,13 +135,7 @@
             />
             <span class="modal__error" id="card-url-input-error"></span>
           </label>
-          <button
-            type="submit"
-            aria-label="Create"
-            class="modal__save modal__save_disabled"
-            id="modal-card-save"
-            disabled
-          >
+          <button type="submit" aria-label="Create" class="modal__submit">
             Create
           </button>
         </form>
