--- a/index.html
+++ b/index.html
@@ -167,5 +167,6 @@
 
     <script defer src="./scripts/index.js"></script>
     <script defer src="./scripts/validation.js"></script>
+    <script defer src="./scripts/utilities.js"></script>
   </body>
 </html>
