--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </li>
     </template>
 
-    <script defer src="./scripts/index.js"></script>
+    <script defer src="./pages/index.js" type="module"></script>
     <script defer src="./scripts/validation.js"></script>
     <script defer src="./scripts/utilities.js"></script>
   </body>
