--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,13 @@
     <meta name="author" content="Lolo E." />
     <title>Around the US</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./pages/index.css" />
   </head>
 
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
         <img
-          src="./images/logo.svg"
+          src="<%= require('./images/logo.svg') %>"
           alt="Around the US logo"
           class="header__logo"
         />
@@ -23,7 +22,7 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/jacques-cousteau.jpg"
+            src="<%= require('./images/jacques-cousteau.jpg') %>"
             alt="Profile avatar"
             class="profile__avatar"
           />
@@ -164,7 +163,5 @@
         </div>
       </li>
     </template>
-
-    <script defer src="./pages/index.js" type="module"></script>
   </body>
 </html>
