--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="travel, adventure, exploration, locations" />
     <meta name="author" content="Lolo E." />
     <title>Around the US</title>
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="/images/favicon.ico" />
   </head>
 
   <body class="page">
